# schwab-agent-rs

./: .coderabbit.yaml  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  SKILL.md  cliff.toml  codecov.yml  dist-workspace.toml  release-plz.toml  renovate.json
.github/: copilot-instructions.md
.github/instructions/: release.instructions.md
.github/workflows/: cd.yml  ci.yml  release-plz.yml  release.yml
src/: cli.rs  config.rs  lib.rs  main.rs  output.rs  raw.rs  shared.rs  verify.rs
src/account/: mod.rs  tests.rs
src/analyze/: mod.rs  tests.rs
src/auth/: mod.rs  tests.rs
src/equity/: mod.rs  tests.rs
src/error/: mod.rs  tests.rs
src/market/: mod.rs  tests.rs
src/options/: chain.rs  contract.rs  expirations.rs  mod.rs  screen.rs  tests.rs  types.rs
src/order/: builder.rs  equity.rs  lifecycle.rs  mod.rs  option.rs  preview.rs  replace.rs  workflow.rs
src/portfolio/: mod.rs  tests.rs
src/ta/: candles.rs  custom.rs  dashboard.rs  expected_move.rs  indicators.rs  interval.rs  mod.rs  tests.rs  types.rs
