[package]
name = "schwab-agent-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Agent-oriented JSON CLI porcelain for schwab-rs"
license = "MIT"
publish = false

[dependencies]
clap = { version = "4.5.51", features = ["derive", "env"] }
dirs = "6.0.0"
open = "5.3.2"
schwab = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
sha2 = "0.10"
serde_with = "3.20.0"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting", "parsing"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
decimal = ["schwab/decimal"]

[dev-dependencies]
tempfile = "3"
