[package]
name = "schwab-agent-rs"
version = "0.3.1"
edition = "2024"
rust-version = "1.95"
description = "Agent-oriented JSON CLI porcelain for schwab-rs"
license = "MIT"
repository = "https://github.com/major/schwab-agent-rs"
readme = "README.md"

[[bin]]
name = "schwab-agent"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
open = "5.3.5"
reqwest = "0.13"
schwab = "0.2.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
sha2 = "0.11"
serde_with = "3.20.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }

[features]
default = ["decimal"]
decimal = ["schwab/decimal"]

[dev-dependencies]
tempfile = "=3.27.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
